# notanova

./: .gitignore  README.md  notanova.py  pyproject.toml  requirements.txt
notanova/: notanova.py  requirements.txt
notanova/assets/: theme.qss
notanova/core/: __init__.py  cloud_sync.py  llm.py  settings.py  spellcheck.py  transcription.py
notanova/logic/: __init__.py  autosave.py  exporter.py  formatter.py
notanova/ui/: __init__.py  editor_widget.py  main_window.py  notebook_tree.py  settings_dialog.py  toolbar.py
