[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notanova"
version = "0.1.0"
description = "NotaNova: An AI-Powered Markdown Note-Taking Application built with PyQt6."
readme = "README.md"
requires-python = ">=3.9" # Specify minimum Python version
license = { text = "MIT License" } # Or choose another license
authors = [
    { name = "Your Name / Org", email = "your@email.com" },
]

dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
    "PyQt6-Multimedia>=6.6.0", # Ensure Multimedia is listed
    "markdown>=3.5.0",
    "Pygments>=2.15.0",
    "pymdown-extensions>=10.0",
    "google-api-python-client>=2.90.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "send2trash>=1.8.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
# Dependencies for AI features
ai = [
    "llama-cpp-python>=0.2.0",    # Check specific version compatibility and build reqs
    "openai-whisper>=20231117",   # Or faster-whisper
    "language-tool-python>=2.7.0",# Requires Java
    "hunspell>=0.5.0",     # Requires hunspell native library
    # Aspell is typically used via command line, not a direct Python dependency
]
# Dependencies for DOCX export
export = [
    "pypandoc>=1.11",             # Requires pandoc executable installed separately
]
# Combined group for all optional features
full = ["notanova[ai]", "notanova[export]"]

[project.scripts]
# Define command-line entry point if desired
# notanova = "notanova.notanova:main"

[project.urls]
Homepage = "https://github.com/yourusername/notanova" # Replace with your repo URL
Issues = "https://github.com/yourusername/notanova/issues" # Replace with your repo URL

# Configuration for Hatchling build backend (optional, defaults are often fine)
# [tool.hatch.build.targets.wheel]
# packages = ["notanova"]
